Bug 263060: ensure that editor is initialized properly before performing             selection operations. r+sr=bzbarsky,a-a=brendan.